[gd_scene load_steps=8 format=2]

[ext_resource path="res://client/world/player/player.tscn" type="PackedScene" id=1]
[ext_resource path="res://client/fonts/DelaGothicOne-Regular.ttf" type="DynamicFontData" id=2]
[ext_resource path="res://client/menu/menu_button.tscn" type="PackedScene" id=3]
[ext_resource path="res://client/menu/setup/colour_swatch.tscn" type="PackedScene" id=4]
[ext_resource path="res://client/menu/setup/player_setup.gd" type="Script" id=5]
[ext_resource path="res://client/menu/setup/colour_selector.gd" type="Script" id=6]

[sub_resource type="DynamicFont" id=1]
size = 72
use_filter = true
font_data = ExtResource( 2 )

[node name="PlayerSetup" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 50.0
margin_top = 50.0
margin_right = -50.0
margin_bottom = -50.0
script = ExtResource( 5 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Header" type="HBoxContainer" parent="."]
anchor_right = 1.0
margin_bottom = 94.0
alignment = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Title" type="Label" parent="Header"]
margin_left = 311.0
margin_right = 868.0
margin_bottom = 105.0
size_flags_horizontal = 5
size_flags_vertical = 5
custom_fonts/font = SubResource( 1 )
custom_colors/font_color_shadow = Color( 0.745098, 0.431373, 0.0392157, 1 )
custom_constants/shadow_offset_y = 5
text = "Player Setup"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CenterContainer" type="CenterContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Control" type="Control" parent="CenterContainer"]
margin_left = 590.0
margin_top = 310.0
margin_right = 590.0
margin_bottom = 310.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Player" parent="CenterContainer/Control" instance=ExtResource( 1 )]

[node name="Footer" type="HBoxContainer" parent="."]
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = -202.0
alignment = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="Footer"]
margin_left = 410.0
margin_right = 770.0
margin_bottom = 202.0
custom_constants/separation = 50
alignment = 1

[node name="ColourSelector" type="GridContainer" parent="Footer/VBoxContainer"]
margin_left = 124.0
margin_top = 20.0
margin_right = 236.0
margin_bottom = 52.0
size_flags_horizontal = 6
size_flags_vertical = 6
custom_constants/vseparation = 8
custom_constants/hseparation = 8
columns = 8
script = ExtResource( 6 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ColourSwatch" parent="Footer/VBoxContainer/ColourSelector" instance=ExtResource( 4 )]
modulate = Color( 1, 0, 0, 1 )
self_modulate = Color( 1, 0, 0, 1 )
margin_right = 32.0
margin_bottom = 32.0
selected = true
colour = Color( 1, 0, 0, 1 )

[node name="ColourSwatch2" parent="Footer/VBoxContainer/ColourSelector" instance=ExtResource( 4 )]
modulate = Color( 0, 1, 0, 1 )
self_modulate = Color( 0, 1, 0, 1 )
margin_left = 40.0
margin_right = 72.0
margin_bottom = 32.0
colour = Color( 0, 1, 0, 1 )

[node name="ColourSwatch3" parent="Footer/VBoxContainer/ColourSelector" instance=ExtResource( 4 )]
modulate = Color( 0, 0, 1, 1 )
self_modulate = Color( 0, 0, 1, 1 )
margin_left = 80.0
margin_right = 112.0
margin_bottom = 32.0
colour = Color( 0, 0, 1, 1 )

[node name="StartButton" parent="Footer/VBoxContainer" instance=ExtResource( 3 )]
margin_top = 122.0
margin_right = 360.0
margin_bottom = 202.0
label = "Start Game"
alignment = 1

[connection signal="colour_changed" from="Footer/VBoxContainer/ColourSelector" to="." method="_on_ColourSelector_colour_changed"]
[connection signal="pressed" from="Footer/VBoxContainer/StartButton" to="." method="_on_StartButton_pressed"]
